src/objects/Company__c.object
<CustomObject>
    <description>user companyWhen company information is null in input form. create a company with just user name and assign user role of company admin.</description>
    <fields>
        <fullName>Company_Logo__c</fullName>
        <label>Company Logo</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <label>BLN Company</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Logo__c</columns>
        <columns>Website_URL__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Company</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>